# dts_file_reader

./: LICENSE  README.md  pyproject.toml
dts_file_reader/: slice.py  test.py
dts_file_reader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
